# kzg_proof_generation

./: Cargo.toml  README.md  build.rs
src/: kernels.cu  kernels.ptx  main.rs
