[package]
name = "kzg_proof_generation"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
rand = "0.8"
rustacuda = "0.1.3"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"
bytemuck = "1.7"
pasta_curves = "0.5.1"
icicle-core = { git = "https://github.com/ingonyama-zk/icicle", branch = "main" }


[build-dependencies]
cc = "1.0"